# PolyCipher

./: CMakeLists.txt
include/: crypto_interface.h
plugins/: CMakeLists.txt
plugins/elgamal/: CMakeLists.txt  elgamal_cipher.cpp
plugins/grunfeld/: CMakeLists.txt  grunfeld_cipher.cpp
plugins/otr/: CMakeLists.txt  otr_cipher.cpp
plugins/rc4/: CMakeLists.txt  rc4_cipher.cpp
plugins/rsa/: CMakeLists.txt  rsa_cipher.cpp
plugins/vigenere/: CMakeLists.txt  vigenere_cipher.cpp
src/: main.cpp  tests.cpp
